fixed a layout bug

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -96,6 +96,3 @@ input {
     width: 60px;
 }
 
-#submit-transaction {
-    margin-right: 3000px;
-}
